<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_photo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/rl_bottom"
        android:background="@color/photal_black"
        android:overScrollMode="never"
        android:paddingTop="@dimen/photal_title_bar_h" />

    <RelativeLayout
        android:id="@+id/rl_title"
        style="@style/layout_mw.h"
        android:layout_height="@dimen/photal_title_bar_h"
        android:background="@color/photal_theme">

        <ImageButton
            android:id="@id/btn_back"
            android:layout_width="@dimen/photal_title_bar_h"
            android:layout_height="match_parent"
            android:background="@drawable/photal_action_btn_bg_selector"
            android:src="@drawable/photal_ic_arrow_back" />

        <TextView
            style="@style/layout_ww.single"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/photal_margin_small"
            android:layout_toRightOf="@id/btn_back"
            android:text="@string/photal_photos"
            android:textColor="@color/photal_title_text"
            android:textSize="@dimen/photal_txt_normal" />

        <Button
            android:id="@id/btn_send"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/photal_btn_send_h"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/photal_margin_normal"
            android:background="@drawable/photal_send_btn_bg_selector"
            android:text="@string/photal_send"
            android:textColor="@color/photal_title_text" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_bottom"
        style="@style/layout_mw"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/photal_theme"
        android:paddingBottom="@dimen/photal_margin_normal"
        android:paddingLeft="@dimen/photal_margin_big"
        android:paddingRight="@dimen/photal_margin_big"
        android:paddingTop="@dimen/photal_margin_normal">

        <TextView
            android:id="@id/tv_album"
            style="@style/layout_ww.single"
            android:layout_centerVertical="true"
            android:drawableRight="@drawable/photal_ic_album_drawable"
            android:gravity="center"
            android:text="@string/photal_album"
            android:textColor="@color/photal_title_text"
            android:textSize="@dimen/photal_txt_normal" />

        <TextView
            android:id="@id/tv_preview"
            style="@style/layout_ww.single"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/photal_preview"
            android:textColor="@color/photal_title_text"
            android:textSize="@dimen/photal_txt_normal" />
    </RelativeLayout>
</RelativeLayout>