<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/photal_black"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:id="@+id/rl_head"
        style="@style/layout_mw.h"
        android:layout_height="@dimen/photal_title_bar_h"
        android:background="@color/photal_theme">

        <ImageButton
            android:id="@id/btn_back"
            android:layout_width="@dimen/photal_title_bar_h"
            android:layout_height="@dimen/photal_title_bar_h"
            android:background="@color/photal_transparent"
            android:padding="@dimen/photal_margin_normal"
            android:scaleType="fitXY"
            android:src="@drawable/photal_ic_arrow_back" />

        <TextView
            android:id="@+id/tv_head_title"
            style="@style/layout_ww.single"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/photal_margin_small"
            android:text="@string/photal_preview"
            android:textColor="@color/photal_title_text"
            android:textSize="@dimen/photal_txt_normal" />

        <Button
            android:id="@id/btn_send"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/photal_btn_send_h"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/photal_margin_normal"
            android:background="@drawable/photal_send_btn_bg_selector"
            android:text="@string/photal_send"
            android:textColor="@color/photal_title_text" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_bottom"
        style="@style/layout_mw"
        android:layout_height="@dimen/photal_bottom_bar_h"
        android:layout_alignParentBottom="true"
        android:background="@color/photal_theme"
        android:padding="@dimen/photal_margin_big">

        <CheckBox
            android:id="@id/cb_check"
            style="@style/layout_ww.single"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:paddingLeft="@dimen/photal_margin_small"
            android:text="@string/photal_choose"
            android:textColor="@color/photal_title_text"
            android:textSize="@dimen/photal_txt_normal" />
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/rl_bottom"
        android:layout_below="@id/rl_head"
        android:overScrollMode="never" />

</RelativeLayout>